@@ -190,6 +190,57 @@ void FastLogger::close()
         TextLog_Term(fast_log);
 }
 
+#ifdef REG_TEST
+static void LogReassembly(const Packet* p)
+{
+    /* Log whether or not this is reassembled data - only indicate
+     * if we're actually going to show any of the payload */
+    if ( !ScOutputAppData() || !p->dsize || !PacketWasCooked(p) )
+        return;
+
+    switch ( p->pseudo_type )
+    {
+    case PSEUDO_PKT_SMB_SEG:
+        TextLog_Print(fast_log, "\n%s\n", "SMB desegmented packet");
+        break;
+    case PSEUDO_PKT_DCE_SEG:
+        TextLog_Print(fast_log, "\n%s\n", "DCE/RPC desegmented packet");
+        break;
+    case PSEUDO_PKT_DCE_FRAG:
+        TextLog_Print(fast_log, "\n%s\n", "DCE/RPC defragmented packet");
+        break;
+    case PSEUDO_PKT_SMB_TRANS:
+        TextLog_Print(fast_log, "\n%s\n", "SMB Transact reassembled packet");
+        break;
+    case PSEUDO_PKT_DCE_RPKT:
+        TextLog_Print(fast_log, "\n%s\n", "DCE/RPC reassembled packet");
+        break;
+    case PSEUDO_PKT_TCP:
+        TextLog_Print(fast_log, "\n%s\n", "Stream reassembled packet");
+        break;
+    case PSEUDO_PKT_IP:
+        TextLog_Print(fast_log, "\n%s\n", "Frag reassembled packet");
+        break;
+    default:
+        // FIXTHIS do we get here for portscan or sdf?
+        break;
+    }
+}
+#endif
+
+static const char* get_pkt_type(Packet* p)
+{
+    switch ( p->ptrs.get_pkt_type() )
+    {
+    case PktType::IP:   return "IP";
+    case PktType::ICMP: return "ICMP";
+    case PktType::TCP:  return "TCP";
+    case PktType::UDP:  return "UDP";
+    default: break;
+    }
+    return "error";
+}
+
 void FastLogger::alert(Packet *p, const char *msg, Event *event)
 {
     LogTimeStamp(fast_log, p);
@@ -230,25 +281,30 @@ void FastLogger::alert(Packet *p, const char *msg, Event *event)
 
         if (msg != NULL)
         {
+#ifdef REG_TEST
+            string tmp = msg + 1;
+            tmp.pop_back();
+            TextLog_Puts(fast_log, tmp.c_str());
+#else
             TextLog_Puts(fast_log, msg);
-            TextLog_Puts(fast_log, " [**] ");
+#endif
         }
-        else
-        {
-            TextLog_Puts(fast_log, "[**] ");
-        }
+        TextLog_Puts(fast_log, " [**] ");
     }
 
     /* print the packet header to the alert file */
     if (p->has_ip())
     {
         LogPriorityData(fast_log, event, 0);
-        TextLog_Print(fast_log, "{%s} ", protocol_names[p->get_ip_proto_next()]);
+        TextLog_Print(fast_log, "{%s} ", get_pkt_type(p));
         LogIpAddrs(fast_log, p);
     }
 
     if(packet)
     {
+#ifdef REG_TEST
+        LogReassembly(p);
+#endif
         if(p->ptrs.ip_api.is_valid())
             LogIPPkt(fast_log, p);
 
