@@ -1897,7 +1897,15 @@ static void ShowRebuiltPacket (TcpSession* ssn, Packet* pkt)
 {
     if ( (ssn->client.config->flags & STREAM5_CONFIG_SHOW_PACKETS) ||
          (ssn->server.config->flags & STREAM5_CONFIG_SHOW_PACKETS) )
+    {
+#ifdef REG_TEST
+        printf("+++++++++++++++++++Stream Packet+++++++++++++++++++++\n");
+#endif
         LogIPPkt(pkt);
+#ifdef REG_TEST
+        printf("\n+++++++++++++++++++++++++++++++++++++++++++++++++++++\n");
+#endif
+    }
 }
 
 static inline unsigned int getSegmentFlushSize(
