@@ -27,6 +27,7 @@
 -- updated binder to bind data, session, and gadget
 -- http_inspect -> http_global, http_server -> http_inspect,
    nhttp_inspect -> new_http_inspect
+-- REG_TEST patches to make -A cmg look more like Snort
 
 125
 -- discovered can't catch exceptions thrown from Lua to C++; need to
